# cahoots-monorepo

./: .aider.chat.history.md  .aider.input.history  .bandit  .cursorrules  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.vllm  EVENT_MODELING_GUIDE.md  EXAMPLE_PROMPTS.md  FEATURE_PROMPTS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  SPEECH_NOTES.md  WORKFLOW-TESTING.md  alembic.ini  blog-post-intro.md  build.sh  buildkitd.toml  coverage.xml  deploy.sh  design_document.md  docker-compose.prod.yml  docker-compose.yml  event_system_overview.md  eventmodeling.txt  fixed-start.sh  fly.toml  nginx.conf  ngrok.yml  output.txt  prometheus.yml  pyproject.toml  (+12 more)
.aider.tags.cache.v3/: cache.db
.cursor/: mcp.json
app/: main.py  metrics.py  telemetry.py
benchmarks/: __init__.py  (+5 more)
libs/context/: pyproject.toml
libs/context/cahoots_context/: exceptions.py
libs/context/cahoots_context/manager/: context_selection.py  project.py
libs/context/cahoots_context/storage/: context_service.py
libs/core/: pyproject.toml  requirements.txt
libs/core/cahoots_core/: config.py  types.py
libs/core/cahoots_core/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  hybrid_provider.py  openai_provider.py  test_provider.py
libs/core/cahoots_core/exceptions/: __init__.py  api.py  auth.py  base.py  domain.py  infrastructure.py  validation.py
libs/core/cahoots_core/models/: api.py  api_key.py  auth.py  billing.py  db_models.py  federation.py  identity_provider.py  invitation.py  metrics.py  qa_suite.py  service.py  story.py  subscription.py  task.py  team.py  team_config.py  user.py  version_vector.py
libs/core/cahoots_core/recognition/: __init__.py  pattern_detector.py
libs/core/cahoots_core/services/: billing.py  federation.py  github_service.py  metrics_service.py  qa_runner.py  qa_suite_generator.py  stripe_service.py
libs/core/cahoots_core/services/trello/: __init__.py  client.py  config.py  service.py
libs/core/cahoots_core/utils/: __init__.py  caching.py  dependencies.py  exceptions.py  version_vector.py
libs/core/cahoots_core/utils/base/: async_base.py  audit.py  base_logger.py  common.py  decorators.py
libs/core/cahoots_core/utils/common/: __init__.py  base.py
libs/core/cahoots_core/utils/config/: __init__.py  base.py
libs/core/cahoots_core/utils/errors/: __init__.py  exceptions.py  handling.py
libs/core/cahoots_core/utils/infrastructure/: __init__.py  base.py
libs/core/cahoots_core/utils/infrastructure/database/: __init__.py  client.py  manager.py
libs/core/cahoots_core/utils/infrastructure/email/: client.py
libs/core/cahoots_core/utils/infrastructure/k8s/: agents.py  client.py  resources.py
libs/core/cahoots_core/utils/infrastructure/redis/: __init__.py  client.py  manager.py  rate_limiter.py
libs/core/cahoots_core/utils/infrastructure/stripe/: __init__.py  client.py
libs/core/cahoots_core/utils/metrics/: __init__.py  base.py  monitoring.py  observability.py  performance.py  timing.py
libs/core/cahoots_core/validation/: __init__.py  policy_chain.py  rule_validator.py  trust_chain.py
libs/events/: pyproject.toml
libs/events/cahoots_events/: __init__.py  auth.py  auth_aggregates.py  auth_commands.py  auth_handler.py  auth_notifications.py  auth_repository.py  auth_views.py  base.py  code_changes.py  command_bus.py  config.py  organization.py  project.py  system_commands.py  team.py  types.py
libs/events/cahoots_events/bus/: __init__.py  constants.py  queue.py  system.py  system_new.py  types.py
libs/events/cahoots_events/exceptions/: __init__.py  base.py  events.py
libs/events/cahoots_events/infrastructure/: __init__.py  client.py  event_store.py  redis.py  view_store.py
libs/events/cahoots_events/models/: __init__.py  base.py  events.py
libs/events/cahoots_events/project/: __init__.py  aggregates.py  commands.py  events.py  handler.py  repository.py  views.py
libs/sdlc/: pyproject.toml
libs/sdlc/api/: main.py  status.py  webhooks.py
libs/sdlc/api/middleware/: auth.py  rate_limit.py
libs/sdlc/api/routers/: auth.py  organizations.py  projects.py  teams.py
libs/sdlc/application/: handlers.py  organization_handler.py
libs/sdlc/domain/: aggregates.py  commands.py  events.py  views.py
libs/sdlc/domain/auth/: __init__.py  aggregates.py  commands.py  events.py  handler.py  notifications.py  repository.py  views.py
libs/sdlc/domain/code_changes/: __init__.py  commands.py  events.py  handler.py  views.py
libs/sdlc/domain/commands/: __init__.py  command_bus.py  create_system_user.py  project.py
libs/sdlc/domain/organization/: aggregates.py  commands.py  events.py  repository.py  views.py
libs/sdlc/domain/team/: __init__.py  commands.py  events.py  views.py
libs/sdlc/infrastructure/: event_store.py  view_store.py
services/agents/: pyproject.toml
services/agents/cahoots_agents/: __init__.py  base.py  factory.py
services/agents/cahoots_agents/developer/: __init__.py  utils.py
services/agents/cahoots_agents/developer/code/: __init__.py  code_generator.py  code_validator.py
services/agents/cahoots_agents/developer/core/: developer.py
services/agents/cahoots_agents/developer/feedback/: __init__.py  feedback_manager.py
services/agents/cahoots_agents/developer/file/: file_manager.py
services/agents/cahoots_agents/developer/pr/: pr_manager.py
services/agents/cahoots_agents/developer/task/: task_manager.py
services/agents/cahoots_agents/pm/: __init__.py  project_manager.py
services/agents/cahoots_agents/qa/: __init__.py  qa_tester.py
services/agents/cahoots_agents/services/: __init__.py  agent_service.py
services/agents/cahoots_agents/ux/: __init__.py
services/agents/cahoots_agents/ux/accessibility/: accessibility.py
services/agents/cahoots_agents/ux/core/: ux_designer.py
services/agents/cahoots_agents/ux/design/: design_system.py
services/agents/cahoots_agents/ux/patterns/: pattern_library.py
services/context-manager/: pyproject.toml
services/context-manager/cahoots_context_manager/: __init__.py  service.py
(+1087 files in other folders)
