[project]
name = "cahoots-service"
version = "0.1.0"
description = "Cahoots Service"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "alembic>=1.7.0",
    "asyncpg>=0.25.0",
    "redis>=4.0.0",
    "kubernetes>=18.0.0",
    "PyGithub>=1.55",
    "stripe>=2.60.0",
    "pydantic>=1.8.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.5",
    "aiohttp>=3.8.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
    "httpx>=0.23.0",
    "pytest-randomly>=3.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [
    "packages/core/tests",
    "packages/events/tests",
    "packages/context/tests",
    "packages/service/tests",
    "packages/agents/tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=packages",
    "--cov-report=term-missing"
]
randomly_seed = 1234
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Tests that take longer to run",
    "api: API tests",
    "db: Database tests",
    "redis: Redis tests",
    "security: Security-related tests"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["packages"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_dev_team_service"] 