[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cahoots"
version = "0.1.0"
description = "AI Development Team"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pylint."messages control"]
ignore = ["setup.py", "__init__.py"]
disable = "all"
enable = [
    "empty-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring"
]

[tool.isort]
profile = "black"
known_first_party = ["cahoots_core", "cahoots_events", "cahoots_context", "cahoots_service", "cahoots_agents"]

[tool.pytest.ini_options]
testpaths = [
    "packages/core/tests",
    "packages/events/tests",
    "packages/context/tests",
    "packages/service/tests",
    "packages/agents/tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=packages",
    "--cov-report=term-missing"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Tests that take longer to run",
    "api: API tests",
    "db: Database tests",
    "redis: Redis tests",
    "security: Security-related tests"
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["packages"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=3.0.0",
    "httpx>=0.23.0",
    "pytest-randomly>=3.15.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/core/src",
    "packages/events/src",
    "packages/context/src",
    "packages/service/src",
    "packages/agents/src"
] 