[project]
name = "cahoots"
version = "0.1.0"
description = "AI-powered task decomposition and project management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "redis>=5.0.0",
    "upstash-redis==1.4.0",

    # LLM providers
    "openai==1.6.1",
    "anthropic==0.8.1",
    "groq==0.4.1",

    # Contex SDK
    "contex-python==0.1.6",

    # Utilities
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.6",
    "httpx==0.25.2",
    "aiohttp==3.9.1",
    "tenacity==8.2.3",
    "structlog==23.2.0",
    "pyjwt==2.8.0",
    "websockets==12.0",
    "duckduckgo-search==4.1.0",
    "email-validator==2.1.0",

    # Caching and embeddings
    "numpy<2.0",
    "scikit-learn==1.3.2",
    "sentence-transformers==2.2.2",
    "torch==2.9.0",
    "transformers==4.50.0",
    "accelerate>=0.26.0",

    # Monitoring
    "prometheus-client==0.23.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "fakeredis==2.20.1",
    "black==23.11.0",
    "pylint==3.0.3",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
]

[tool.uv]
# Use CPU-only PyTorch on Linux
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pylint.messages_control]
disable = ["C0114", "C0115", "C0116"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
