[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cahoots-context"
version = "0.1.0"
description = "Context management for Cahoots"
requires-python = ">=3.11"
dependencies = [
    "cahoots-core>=0.1.0",
    "cahoots-events>=0.1.0",
    "business-rules>=1.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11.0",
    "pytest-randomly>=3.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cahoots_context"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cahoots_context --cov-report=term-missing"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]
