[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cahoots-events"
version = "0.1.0"
description = "Event management for Cahoots"
requires-python = ">=3.11"
dependencies = [
    "cahoots-core>=0.1.0",
    "pydantic>=2.0.0",
    "redis>=5.0.0",
    "aioredis>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.11.0",
    "pytest-randomly>=3.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["cahoots_events"]

[tool.hatch.build]
packages = ["cahoots_events"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=cahoots_events --cov-report=term-missing"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]

[tool.poetry]
name = "cahoots-events"
version = "0.1.0"
description = "Event system for Cahoots"
authors = ["Cahoots Team"]
