[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdlc"
version = "0.1.0"
description = "SDLC package for AI Development Team"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "argon2-cffi>=23.1.0",
    "redis[hiredis]>=5.0.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.2",
    "pytest-mock>=3.11.0",
    "httpx>=0.24.0",
    "pytest-randomly>=3.15.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=sdlc --cov-report=term-missing"
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["."] 